--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
     <include src="./partials/page-header.html"></include>
     <include src="./partials/main_page/main_page.html"></include>
     <include src="./partials/page-footer.html"></include>
+    <include src="./partials/main_page/background-decor-mob.html"></include>
   </body>
 </html>
