--- a/src/printing.html
+++ b/src/printing.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>3D Друк</title>
+    <title>Ми створюємо</title>
     <link rel="stylesheet" href="./sass/main.scss" />
     <script type="module" src="./index.js"></script>
   </head>
@@ -11,6 +11,7 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/page-header.html"></include>
     <include src="./partials/printing_page/model-examples.html"></include>
+    <include src="./partials/printing_page/process-description.html"></include>
     <include src="./partials/page-footer.html"></include>
   </body>
 </html>
