--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,10 @@
     <include src="./partials/main_page/main_page.html"></include>
     <include src="./partials/page-footer.html"></include>
     <include src="./partials/main_page/background-decor-mob.html"></include>
+    <include src="./partials/main_page/background-decor-mob-nav.html"></include>
+    <include src="./partials/main_page/background-decor-tab.html"></include>
+    <include src="./partials/main_page/background-decor-tab-nav.html"></include>
+    <include src="./partials/main_page/background-decor.html"></include>
+    <include src="./partials/main_page/background-decor-main.html"></include>
   </body>
 </html>
