--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <include src="./partials/main_page/more_photo_overlay.html"></include>
     <include src="./partials/page-header.html"></include>
     <include src="./partials/main_page/main_page.html"></include>
     <include src="./partials/page-footer.html"></include>
