--- a/src/order.html
+++ b/src/order.html
@@ -19,5 +19,7 @@
     <include src="./partials/order/order-form.html"></include>
 
     <include src="./partials/page-footer.html"></include>
+
+    <script type="module" src="./js/order-form.js"></script>
   </body>
 </html>
